--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -1,32 +1,32 @@
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
-button{
-  cursor: pointer;
-  padding: .5rem .6rem;
-  border: none;
-  border-radius: .5rem;
-  background-color: #8a8;
-  color: #fff;
-  white-space: nowrap;
+button {
+	cursor: pointer;
+	padding: 0.5rem 0.6rem;
+	border: none;
+	border-radius: 0.5rem;
+	background-color: #8a8;
+	color: #fff;
+	white-space: nowrap;
 }
-button:hover{
-  background-color: #686;
+button:hover {
+	background-color: #686;
 }
-button:active{
-  background-color: #242;
+button:active {
+	background-color: #242;
 }
