--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -1,13 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Sometype+Mono&display=swap');
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+	font-family: 'Sometype Mono', monospace;
+
+	--gray-100: hsl(0, 0%, 99%);
+	--gray-200: hsl(0, 0%, 92%);
+	--gray-300: hsl(0, 0%, 84%);
+	--gray-400: hsl(0, 0%, 70%);
+	--gray-500: hsl(0, 0%, 50%);
+	--gray-600: hsl(0, 0%, 30%);
+	--gray-700: hsl(0, 0%, 20%);
+	--gray-800: hsl(0, 0%, 15%);
+	--gray-900: hsl(0, 0%, 10%);
 }
 
 html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
+}
+
+body {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 a {
@@ -19,14 +37,21 @@ button {
 	cursor: pointer;
 	padding: 0.5rem 0.6rem;
 	border: none;
-	border-radius: 0.5rem;
-	background-color: #8a8;
-	color: #fff;
+	border-radius: 0.2rem;
+	background-color: var(--gray-300);
+	color: var(--gray-900);
+	font-weight: 600;
 	white-space: nowrap;
+	user-select: none;
+}
+button:disabled {
+	pointer-events: none;
+	background-color: var(--gray-400);
+	color: var(--gray-500);
 }
 button:hover {
-	background-color: #686;
+	background-color: var(--gray-100);
 }
 button:active {
-	background-color: #242;
+	background-color: var(--gray-300);
 }
