--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -4,14 +4,14 @@
 
 @layer base {
 	/* style-scrollbars-css */
-	/* ::-webkit-scrollbar {
-		width: 0.5rem;
-		height: 0.5rem;
-	} */
+	::-webkit-scrollbar {
+		width: 0rem;
+		height: 0rem;
+	}
 }
 @layer components {
 	.button {
-		@apply m-1 rounded-lg p-2 shadow-lg outline-none;
+		@apply rounded-lg p-2 shadow-lg outline-none;
 		@apply text-lg font-semibold;
 		@apply ringed;
 		@apply scale-100;
