--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -12,21 +12,46 @@
 @layer components {
 	.button {
 		@apply select-none;
-		@apply rounded-lg p-2 shadow-lg outline-none;
-		@apply text-lg font-semibold;
-		@apply ringed;
-		@apply scale-100;
-	}
-	.button:active {
-		@apply scale-[0.98];
-	}
-	.button:disabled {
-		pointer-events: none;
-		@apply opacity-50;
-	}
-
-	.ringed {
+		@apply rounded-lg shadow-lg outline-none;
+		@apply p-2 text-lg font-semibold;
 		@apply bg-secondary text-background;
-		@apply ring-2 ring-inset ring-secondary;
+		@apply ring-4 ring-inset ring-secondary;
+		@apply relative inline-block;
+		contain: paint;
+		&:after {
+			--pulse-size: 80%;
+			content: '';
+			@apply z-50;
+			@apply pointer-events-none;
+			@apply absolute bg-white/20;
+			inset: 50%;
+			transform: translate(-50%, -50%);
+			width: 1%;
+			aspect-ratio: 1/1;
+			border-radius: 50%;
+
+			transition-property: width, height, animation;
+			transition-duration: 0.3s;
+			transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+		}
+		&:active,
+		&:focus {
+			&:after {
+				width: var(--pulse-size, 80%);
+				animation: pulse 0.9s 0.6s ease-in-out infinite alternate;
+			}
+		}
+		&:disabled {
+			pointer-events: none;
+			@apply opacity-50;
+		}
+	}
+	@keyframes pulse {
+		0% {
+			width: var(--pulse-size, 80%);
+		}
+		100% {
+			width: calc(var(--pulse-size, 80%) - 1rem);
+		}
 	}
 }
